# kami-solver

./: ChangeLog.md  Driver.hs  files.txt  kami-solver.cabal
Kami2PuzzleText/: StoryA Order.txt
Kami2PuzzleText/StoryA/: Bud1.puz  Bud2.puz  Bud3.puz  Bud4.puz  Bud5.puz  Bud6.puz  Corners1.puz  Corners2.puz  Corners3.puz  Corners4.puz  Corners5.puz  Corners6.puz  Hardline1.puz  Hardline2.puz  Hardline3.puz  Hardline4.puz  Hardline5.puz  Hardline6.puz  Hatch1.puz  Hatch2.puz  Hatch3.puz  Hatch4.puz  Hatch5.puz  Hatch6.puz  Hexy1.puz  Hexy2.puz  Hexy3.puz  Hexy4.puz  Hexy5.puz  Hexy6.puz  Islands1.puz  Islands2.puz  Islands3.puz  Islands4.puz  Islands5.puz  Islands6.puz  Lines1.puz  Lines2.puz  Lines3.puz  Lines4.puz  (+75 more)
cbits/: diameter.c
src/: Driver.hs  Kami.hs  Parser.hs  Progress.hs
