name:                kami-solver
version:             0.1.0.0
synopsis:            Solver for the KAMI 2 puzzles
description:         Solver for the KAMI 2 puzzles
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2017 Eric Mertens
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable kami-solver
  main-is:             Driver.hs
  other-modules:       Parser, Kami
  hs-source-dirs:      src
  c-sources:           cbits/diameter.c
  ghc-options:         -threaded -with-rtsopts=-N -Wall
  build-depends:       base                 >=4.9  && <4.10,
                       parallel             >=3.2  && <3.3,
                       fgl                  >=5.5  && <5.6,
                       unordered-containers >=0.2  && <0.3,
                       hashable             >=1.2  && <1.3,
                       containers           >=0.5  && <0.6,
                       vector               >=0.11 && <0.13,
                       pqueue               >=1.3  && <1.4,
                       text                 >=1.2  && <1.3,
                       split                >=0.2  && <0.3,
                       filepath             >=1.4  && <1.5,
                       terminfo             >=0.4  && <0.5
  default-language:    Haskell2010
